<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg4"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FUTURE"
                android:textSize="40dp"
                android:layout_marginTop="40dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center_horizontal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="1. Future Perfect Tense"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="30dp"
                android:text="@string/future_perfect"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="Rumus : "
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="• (+) S + will + have + V3"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (-) S + will + have + not + V3"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (?) Will + S + have + V3"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="Contoh : "
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:text="• (+) She will have finished cooking at 10 o’clock"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (-) She will not have finished cooking at 10 o’clock"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (?) will She  have finished cooking at 10 o’clock?"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:text="2. Future Continuous Tense"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:text="@string/future_continuous"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="Rumus : "
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="• (+) S + will + be + Ving"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (-) S+ will + not + be + Ving"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (?) Will + S + be + Ving"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="Contoh : "
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:text="• (+) he will be working tomorrow at 10 o’clock"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (-) he will not be working tomorrow at 10 o’clock"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (?) will he be working tomorrow at 10 o’clock?"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:text="3. Future Perfect Continuous Tense"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:text="@string/future_perfect_continuous"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="Rumus : "
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="• (+) S + will + have + been + Ving"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (-) S + will + have + not + been + Ving"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (?) Will + S + have + been + Ving"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="Contoh : "
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:text="• (+) She will have been working at 10 o’clock"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (-) She will not have been working at 10 o’clock"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:text="• (?) Will she have been working at 10 o’clock?"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"/>

    </LinearLayout>
</ScrollView>